feat: 1. 文档补充，新增 sentence 和 background 相关内容 2. 数据库 schema 新增 sentence 和 background 相关表 3. 从 controller 中提取出 dao 层到单独的 py 文件
